Time: 1 ms (98.32%), Space: 42.1 MB (100.00%) - LeetHub